# compiler

./: Main.hs  README.md  install  libmincaml.s  min-caml.cabal  stack.yaml
compiler/: Main.hs  install
compiler/src/: Base.hs
compiler/src/BackEnd/: Decode.hs
compiler/src/BackEnd/Mips/: Simm.hs
compiler/src/MiddleEnd/: Alpha.hs  CSE.hs  Elim.hs  Inline.hs  KNormal.hs
compiler/test/: Spec.hs  Unit.hs  cls-rec.ml  fib.ml  float.ml  floor.ml  inprod-rec.ml  non-tail-if2.ml  test.ml  tri.ml
minrt/: minrt.ml  minrt.s
mips/: Main.hs  README.md  install  libmincaml.s  min-caml.cabal
mips/minrt/: contest.ppm  contest.sld  minrt.ml  minrt.s  txt.txt
mips/minrt/._d/: miniMLRuntime.d  minrt.d
mips/src/: AllTypes.hs  Alpha.hs  Asm.hs  Base.hs  Beta.hs  CSE.hs  Closure.hs  ConstFold.hs  Emit.hs  KNormal.hs  Lexer.x  Optimise.hs  Parser.y  RegAlloc.hs  Simm.hs  Typing.hs  Virtual.hs  float.c  sincos.ml  tags
mips/src/BackEnd/: float.c
mips/src/BackEnd/Mips/: Asm.hs  Emit.hs  RegAlloc.hs  Virtual.hs
mips/src/FrontEnd/: Lexer.x  Parser.y  Syntax.hs-boot  Typing.hs
mips/src/MiddleEnd/: Beta.hs  Closure.hs  Closure.hs-boot  ConstFold.hs  Elim.hs  Inline.hs  KNormal.hs  Optimise.hs
mips/test/: Common.hs  ML.hs  Spec.hs  Unit.hs  ack.s  adder.s  cls-bug.s  cls-bug2.s  cls-rec.s  cls-reg-bug.s  even-odd.s  fact.ml  fib.s  funcomp-y.s  funcomp.s  gcd.s  inprod-int.ml  inprod-int.s  inprod-loop.s  inprod-rec.s  inprod.s  join-reg.s  join-reg2.s  join-stack.s  join-stack2.s  join-stack3.s  matmul-flat.s  matmul.ml  matmul.s  non-tail-if.s  non-tail-if2.s  print.s  shuffle.s  spill.s  spill2.s  spill3.s  sum-tail.s  sum.s  test.ml
mips/test/XFormat/: Util.hs
src/: Base.hs  libmincaml.ml  libmincaml.s
src/BackEnd/: Decode.hs
src/BackEnd/First/: Asm.hs  Emit.hs  RegAlloc.hs  Simm.hs  Virtual.hs
src/BackEnd/FirstArch/: Asm.hs  Emit.hs  RegAlloc.hs  Simm.hs  Virtual.hs
src/BackEnd/Mips/: Asm.hs  Emit.hs  Simm.hs  Virtual.hs
src/BackEnd/Second/: Analysis.hs  Asm.hs  BigInteger.hs  Emit.hs  FromLProg.hs  Optimise.hs  RegAlloc.hs  SSA_Deconstruction.hs  SaveAndRestore.hs  SplitInt.hs  Virtual.hs
src/BackEnd/Second/Analysis/: Base.hs  Lifetime.hs  Stack.hs  StackAndReg.hs
src/BackEnd/Second/Optimise/: CompareBranch.hs  ConstFold.hs  Elim.hs  MulAdd.hs  NanjaKore.hs  TailCall.hs
src/BackEnd/Second/RegAlloc/: Coalescing.hs  Color.hs  Coloring.hs  Dominance.hs  Dominator.hs  LivenessAnalysis.hs  PhiLifting.hs  Spilling.hs
src/BackEnd/Second/RegAlloc/Coalescing/: PhiOptimise.hs
src/BackEnd/Second/RegAlloc/Dominance/: Pure.hs
src/BackEnd/Second/RegAlloc/Dominator/: Pure.hs
src/BackEnd/Second/SaveAndRestore/: NoRename.hs  Rename.hs
src/FrontEnd/: Lexer.x  Parser.y  Syntax.hs  Typing.hs
src/MiddleEnd/: Alpha.hs  Assoc.hs  Beta.hs  CSE.hs  Closure.hs  ConstFold.hs  Elim.hs  Global.hs  Inline.hs  KNormal.hs  LambdaLifting.hs  Optimise.hs  StaticAlloc.hs
src/MiddleEnd/LLVM/: BackEnd.hs  MiddleEnd.hs
src/MiddleEnd/LLVM/BackEnd/: Expr.hs
src/MiddleEnd/LLVM/FrontEnd/: Base.hs  Expr.hs  Prog.hs
test/: Common.hs  ML.hs  Spec.hs  Unit.hs  float.ans  inprod-rec.ml  lambda-lifting.ml  spill.ml
