name:                min-caml
version:             0.1.0.0
build-type:          Simple
extra-source-files:  src/FrontEnd/Parser.y
                     src/FrontEnd/Lexer.x
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -Wall
  build-depends:       base
                     , mtl
                     , lens
                     , text
                     , array
                     , vector
                     , bytestring
                     , containers
                     , transformers
                     , BitSyntax
  default-language:    Haskell2010
  build-tools:         happy, alex
  exposed-modules:     Base
                     , FrontEnd.Syntax
                     , FrontEnd.Lexer
                     , FrontEnd.Parser
                     , FrontEnd.Typing
                     , MiddleEnd.KNormal
                     , MiddleEnd.Alpha
                     , MiddleEnd.Optimise
                     , MiddleEnd.Beta
                     , MiddleEnd.Assoc
                     , MiddleEnd.Inline
                     , MiddleEnd.ConstFold
                     , MiddleEnd.CSE
                     , MiddleEnd.Elim
                     , MiddleEnd.Closure
                     , BackEnd.Decode
                     , BackEnd.Mips.Asm
                     , BackEnd.Mips.Virtual
                     , BackEnd.Mips.RegAlloc
                     , BackEnd.Mips.Simm
                     , BackEnd.Mips.Emit
                     , BackEnd.FirstArch.Asm
                     , BackEnd.FirstArch.Virtual
                     , BackEnd.FirstArch.RegAlloc
                     , BackEnd.FirstArch.Simm
                     , BackEnd.FirstArch.Emit
executable min-caml
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , min-caml
                     , filepath
                     , containers
                     , optparse-applicative
  default-language:    Haskell2010

test-suite min-caml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Common
                     , Unit
                     , ML
                     , Spec
                     , XFormat.Util
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , lens
                     , text
                     , shelly
                     , xformat
                     , process
                     , filepath
                     , min-caml
                     , transformers
                     , scientific
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/2016-cpuex-C/compiler

