name:                min-caml
version:             0.1.0.0
build-type:          Simple
extra-source-files:  src/FrontEnd/Parser.y
                     src/FrontEnd/Lexer.x
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  ghc-options:         -O3 -Wall
  build-depends:       base
                     , llvm-general
                     , llvm-general-pure
                     , mtl
                     , lens
                     , text
                     , array
                     , extra
                     , vector
                     , bytestring
                     , containers
                     , file-embed
                     , transformers
                     , BitSyntax
                     , template-haskell
  exposed-modules:     Base
                     , FrontEnd.Syntax
                     , FrontEnd.Lexer
                     , FrontEnd.Parser
                     , FrontEnd.Typing
                     , MiddleEnd.KNormal
                     , MiddleEnd.Alpha
                     , MiddleEnd.Optimise
                     , MiddleEnd.Beta
                     , MiddleEnd.Assoc
                     , MiddleEnd.Inline
                     , MiddleEnd.ConstFold
                     , MiddleEnd.CSE
                     , MiddleEnd.Elim
                     , MiddleEnd.LambdaLifting
                     , MiddleEnd.StaticAlloc
                     , MiddleEnd.Closure
                     , MiddleEnd.LLVM.FrontEnd.Base
                     , MiddleEnd.LLVM.FrontEnd.Expr
                     , MiddleEnd.LLVM.FrontEnd.Prog
                     , MiddleEnd.LLVM.MiddleEnd
                     , MiddleEnd.LLVM.BackEnd
                     , BackEnd.Decode
                     , BackEnd.First.Asm
                     , BackEnd.First.Virtual
                     , BackEnd.First.RegAlloc
                     , BackEnd.First.Simm
                     , BackEnd.First.Emit
                     , BackEnd.Second.Asm
                     , BackEnd.Second.FromLProg
                     , BackEnd.Second.Virtual
                     , BackEnd.Second.RegAlloc
                     , BackEnd.Second.RegAlloc.LivenessAnalysis
                     , BackEnd.Second.RegAlloc.Dominance
                     , BackEnd.Second.RegAlloc.Dominance.Pure
                     , BackEnd.Second.RegAlloc.Coloring
                     , BackEnd.Second.RegAlloc.Coalescing
                     , BackEnd.Second.RegAlloc.PhiLifting
                     , BackEnd.Second.SSA_Deconstruction
                     , BackEnd.Second.Emit
                     , BackEnd.Second.Optimise.ConstFold
  build-tools:         happy, alex
  default-language:    Haskell2010

executable min-caml
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  build-depends:       base
                     , lens
                     , min-caml
                     , filepath
                     , bytestring
                     , file-embed
                     , containers
                     , optparse-applicative
                     , llvm-general
                     , llvm-general-pure
  default-language:    Haskell2010

test-suite min-caml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Common
                     , Unit
                     , ML
                     , Spec
                     , XFormat.Util
  build-depends:       base
                     , min-caml
                     , hspec
                     , QuickCheck
                     , lens
                     , text
                     , shelly
                     , xformat
                     , process
                     , filepath
                     , bytestring
                     , file-embed
                     , transformers
                     , scientific
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/2016-cpuex-C/compiler

